Fixed intro links spacing

--- a/style.css
+++ b/style.css
@@ -338,8 +338,14 @@ a {
 
 /* Media queries */
 @media screen and (max-width: 1434px) {
+    .intro-link_container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
     .intro-link_container .inline-link {
-        margin: 0;
+        margin-left: 0;
+        margin-top: 15px;
     }
 }
 
